fixed search widget horizontal scrollbar issue

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -168,6 +168,9 @@ html, body {
     z-index: 2000; /*Over-write bootstrap style so that search results appear on top of any content*/
     max-height: 200px;
     overflow-y: auto;
+    li {
+      .calc('width', ~"calc(100% - 6px)");
+    }
     span {
       margin-left: 4px;
       text-overflow: ellipsis;
